--- a/empleos/src/main/resources/application.properties
+++ b/empleos/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.jpa.hibernate.ddl-auto = update
 # MIS PROPIEDADES
 empleos.ruta.imagenes=C:/Users/camilo.rivera/Documents/Programacion/repositorios/Empleos-spring-boot/empleos/src/main/resources/static/images/
 spring.data.web.pageable.default-page-size=5
+
+
+#spring.security.user.name=user
+#spring.security.user.password=clave
