--- a/empleos/src/main/resources/application.properties
+++ b/empleos/src/main/resources/application.properties
@@ -13,9 +13,14 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto = update
 
 # MIS PROPIEDADES
-empleos.ruta.imagenes=C:/Users/camilo.rivera/Documents/Programacion/repositorios/Empleos-spring-boot/empleos/src/main/resources/static/images/
+empleos.ruta.imagenes=C:/Users/camilo.rivera/Documents/Programacion/temporales/images/
+empleosapp.ruta.cv=C:/Users/camilo.rivera/Documents/Programacion/temporales/files-cv/
 spring.data.web.pageable.default-page-size=5
 
 
 #spring.security.user.name=user
 #spring.security.user.password=clave
+
+# CONFIGURACION DEL CHARSET PARA HTTP
+spring.http.encoding.enabled=true
+spring.http.encoding.charset=UTF-8
